--- a/PreciseNode/Internal/AssemblyVersion.tt
+++ b/PreciseNode/Internal/AssemblyVersion.tt
@@ -27,7 +27,7 @@
 	int i2 = 0;
 	string s;
 
-	string versionfile =  @"D:\Users\jbb\github\ksp-precisenode\PreciseNode\etc\PreciseNode.version";
+	string versionfile =  @"D:\Users\jbb\github\ksp-precisenode\PreciseNode.version";
 	if (!File.Exists(versionfile))
 	{
 		Write("File: " + versionfile + " missing\n");		
